--- a/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
@@ -119,18 +119,18 @@ MNT_communism_ADJ:0 "Moontown"
 ##################label
 # West Equestria #
 ##################
-ANG_neutrality:0 "Angren"
-ANG_neutrality_DEF:0 ""
-ANG_fascism:0 ""
-ANG_fascism_DEF:0 ""
-ANG_communism:0 ""
-ANG_communism_DEF:0 ""
-ANG_democratic:0 ""
-ANG_democratic_DEF:0 ""
-ANG_fascism_ADJ:0 ""
-ANG_democratic_ADJ:0 ""
-ANG_neutrality_ADJ:0 ""
-ANG_communism_ADJ:0 ""
+ANG_neutrality:0 "Swangern"
+ANG_neutrality_DEF:0 "Swangern"
+ANG_fascism:0 "Swangern"
+ANG_fascism_DEF:0 "Swangern"
+ANG_communism:0 "Swangern"
+ANG_communism_DEF:0 "Swangern"
+ANG_democratic:0 "Swangern"
+ANG_democratic_DEF:0 "Swangern"
+ANG_fascism_ADJ:0 "Swangern"
+ANG_democratic_ADJ:0 "Swangern"
+ANG_neutrality_ADJ:0 "Swangern"
+ANG_communism_ADJ:0 "Swangern"
 
 ##############label
 # South-East #
