--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -62,7 +62,7 @@ DER_communism_ADJ:0 "Deer Reservation"
 #########################
 #CRY in replace/tdr_eaw_countries_overrides_l_english.yml
 
-KDW_neutrality:0 "Order of Belladonna-Branch"
+KDW_neutrality:0 "Order of Belladonna"
 KDW_neutrality_DEF:0 ""
 KDW_fascism:0 ""
 KDW_fascism_DEF:0 ""
@@ -410,7 +410,7 @@ KER_democratic_ADJ:0 ""
 KER_neutrality_ADJ:0 ""
 KER_communism_ADJ:0 ""
 
-TEM_neutrality:0 "Temeria"
+TEM_neutrality:0 "Gallopia"
 TEM_neutrality_DEF:0 ""
 TEM_fascism:0 ""
 TEM_fascism_DEF:0 ""
@@ -488,7 +488,7 @@ BRG_democratic_ADJ:0 ""
 BRG_neutrality_ADJ:0 ""
 BRG_communism_ADJ:0 ""
 
-ELD_neutrality:0 "Ellander"
+ELD_neutrality:0 "Lopesiana"
 ELD_neutrality_DEF:0 ""
 ELD_fascism:0 ""
 ELD_fascism_DEF:0 ""
@@ -514,7 +514,7 @@ CAR_democratic_ADJ:0 ""
 CAR_neutrality_ADJ:0 ""
 CAR_communism_ADJ:0 ""
 
-DRA_neutrality:0 "Drakenborg"
+DRA_neutrality:0 "Dragon City"
 DRA_neutrality_DEF:0 ""
 DRA_fascism:0 ""
 DRA_fascism_DEF:0 ""
@@ -527,7 +527,7 @@ DRA_democratic_ADJ:0 ""
 DRA_neutrality_ADJ:0 ""
 DRA_communism_ADJ:0 ""
 
-MON_neutrality:0 "Montecalvo"
+MON_neutrality:0 "Montecanter"
 MON_neutrality_DEF:0 ""
 MON_fascism:0 ""
 MON_fascism_DEF:0 ""
