--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -501,7 +501,7 @@ ELD_democratic_ADJ:0 ""
 ELD_neutrality_ADJ:0 ""
 ELD_communism_ADJ:0 ""
 
-CAR_neutrality:0 "Carreras"
+CAR_neutrality:0 "Coursing"
 CAR_neutrality_DEF:0 ""
 CAR_fascism:0 ""
 CAR_fascism_DEF:0 ""
