Severiana cities. Part 1.
Trying to catch up with the new map of Stalliongrad.
( While still writing the Severianas story... )

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -757,51 +757,51 @@
  STATE_756:0 "STATE_756"
  STATE_757:0 "STATE_757"
  STATE_758:0 "STATE_758"
- STATE_759:0 "Novokopitsk"
+ STATE_759:0 "Novochernushsk"
  STATE_760:0 "STATE_760"
- STATE_761:0 "Krupochkino"
+ STATE_761:0 "White Wheat"
  STATE_762:0 "Nizhny Novokopitsk"
- STATE_763:0 "Novochernushsk"
+ STATE_763:0 "Krupochkino"
  STATE_764:0 "Severskoye"
  STATE_765:0 "STATE_765"
  STATE_766:0 "STATE_766"
- STATE_767:0 "STATE_767"
+ STATE_767:0 "Pryanichnoye"
  STATE_768:0 "Severokholm"
- STATE_769:0 "STATE_769"
- STATE_770:0 "STATE_770"
- STATE_771:0 "STATE_771"
+ STATE_769:0 "Novorzhekovsk"
+ STATE_770:0 "Booktogorsk"
+ STATE_771:0 "Drozdniy"
  STATE_772:0 "STATE_772"
  STATE_773:0 "East Porridge Town"
  STATE_774:0 "STATE_774"
- STATE_775:0 "STATE_775"
+ STATE_775:0 "Kon'linskie Ostrova"
  STATE_776:0 "STATE_776"
  STATE_777:0 "St. Petershoof"
  STATE_778:0 "Skakunsk"
  STATE_779:0 "STATE_779"
  STATE_780:0 "Sedlovsk"
  STATE_781:0 "STATE_781"
- STATE_782:0 "STATE_782"
+ STATE_782:0 "Skull Island"
  STATE_783:0 "Pluga"
  STATE_784:0 "Trottingham"
  STATE_785:0 "STATE_785"
  STATE_786:0 "Azkaban"
  STATE_787:0 "Stavropon"
- STATE_788:0 "STATE_788"
- STATE_789:0 "STATE_789"
+ STATE_788:0 "Solntsevo"
+ STATE_789:0 "Tvorozhninsk"
  STATE_790:0 "Ravenskoye"
  STATE_791:0 "Sladkiy"
  STATE_792:0 "STATE_792"
  STATE_793:0 "Konzan"
- STATE_794:0 "Stremiaslavl"
- STATE_795:0 "STATE_795"
- STATE_796:0 "STATE_796"
- STATE_797:0 "STATE_797"
+ STATE_794:0 "Enskiy Okrug"
+ STATE_795:0 "Polovsky"
+ STATE_796:0 "Smovskoy"
+ STATE_797:0 "Muffinskoye"
  STATE_798:0 "STATE_798"
- STATE_799:0 "STATE_799"
+ STATE_799:0 "Hoofbeat"
  STATE_800:0 "Severgrad"
- STATE_801:0 "STATE_801"
+ STATE_801:0 "Cherryabinsk"
  STATE_802:0 "Revoltsovo"
- STATE_803:0 "STATE_803"
+ STATE_803:0 "Severgradskiy Okrug"
  STATE_804:0 "Zayatsk"
  STATE_805:0 "St. Altidiysk"
  STATE_806:0 "STATE_806"
@@ -813,18 +813,18 @@
  STATE_812:0 "STATE_812"
  STATE_813:0 "STATE_813"
  STATE_814:0 "STATE_814"
- STATE_815:0 "Koshkino"
- STATE_816:0 "STATE_816"
- STATE_817:0 "STATE_817"
+ STATE_815:0 "Krasivsk"
+ STATE_816:0 "Estuariy"
+ STATE_817:0 "Kovkino"
  STATE_818:0 "STATE_818"
- STATE_819:0 "STATE_819"
- STATE_820:0 "STATE_820"
+ STATE_819:0 "Zlatotsvet"
+ STATE_820:0 "Pomsk"
  STATE_821:0 "Sovyenok"
  STATE_822:0 "Novocrystalsk"
- STATE_823:0 "STATE_823"
- STATE_824:0 "STATE_824"
+ STATE_823:0 "Makayev Holm"
+ STATE_824:0 "Stary Les"
  STATE_825:0 "STATE_825"
- STATE_826:0 "STATE_826"
+ STATE_826:0 "Zvezdopadovo"
  STATE_827:0 "STATE_827"
  STATE_828:0 "Town Up North"
  STATE_829:0 "STATE_829"
@@ -854,8 +854,8 @@
  STATE_853:0 "STATE_853"
  STATE_854:0 "STATE_854"
  STATE_855:0 "STATE_855"
- STATE_856:0 "STATE_856"
- STATE_857:0 "STATE_857"
+ STATE_856:0 "Bezdna"
+ STATE_857:0 "Bukhovo"
  STATE_858:0 "STATE_858"
  STATE_859:0 "STATE_859"
  STATE_860:0 "Canterine"
