Severiana cities. Part 2

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -737,8 +737,8 @@
  STATE_736:0 "STATE_736"
  STATE_737:0 "STATE_737"
  STATE_738:0 "STATE_738"
- STATE_739:0 "Kobilyakovo"
- STATE_740:0 "Kobilkyno"
+ STATE_739:0 "Kobyliakovo"
+ STATE_740:0 "Kobylkyno"
  STATE_741:0 "STATE_741"
  STATE_742:0 "Veliky Southgorod"
  STATE_743:0 "STATE_743"
@@ -773,11 +773,11 @@
  STATE_772:0 "STATE_772"
  STATE_773:0 "East Porridge Town"
  STATE_774:0 "STATE_774"
- STATE_775:0 "Kon'linskie Ostrova"
+ STATE_775:0 "Kon'linskie Islands"
  STATE_776:0 "STATE_776"
  STATE_777:0 "St. Petershoof"
  STATE_778:0 "Skakunsk"
- STATE_779:0 "STATE_779"
+ STATE_779:0 "Korolevskiy Island"
  STATE_780:0 "Sedlovsk"
  STATE_781:0 "STATE_781"
  STATE_782:0 "Skull Island"
@@ -791,7 +791,7 @@
  STATE_790:0 "Ravenskoye"
  STATE_791:0 "Sladkiy"
  STATE_792:0 "STATE_792"
- STATE_793:0 "Konzan"
+ STATE_793:0 "Konzan'"
  STATE_794:0 "Enskiy Okrug"
  STATE_795:0 "Polovsky"
  STATE_796:0 "Smovskoy"
@@ -819,9 +819,9 @@
  STATE_818:0 "STATE_818"
  STATE_819:0 "Zlatotsvet"
  STATE_820:0 "Pomsk"
- STATE_821:0 "Sovyenok"
- STATE_822:0 "Novocrystalsk"
- STATE_823:0 "Makayev Holm"
+ STATE_821:0 "Sovki"
+ STATE_822:0 "Novocrystal'sk"
+ STATE_823:0 "Makayev"
  STATE_824:0 "Stary Les"
  STATE_825:0 "STATE_825"
  STATE_826:0 "Zvezdopadovo"
