Severiana cities. Part 3
Finished with Chinese map

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -793,7 +793,7 @@
  STATE_792:0 "STATE_792"
  STATE_793:0 "Konzan'"
  STATE_794:0 "Enskiy Okrug"
- STATE_795:0 "Polovsky"
+ STATE_795:0 "Polovskiy"
  STATE_796:0 "Smovskoy"
  STATE_797:0 "Muffinskoye"
  STATE_798:0 "STATE_798"
