--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -335,6 +335,35 @@ VICTORY_POINTS_10100:0 "Zvezdopadovo" #Zvezdopadovo
 VICTORY_POINTS_9953:0 "Starryskiy Mine"
 VICTORY_POINTS_10008:0 "Prevozmogalovo"
 VICTORY_POINTS_2601:0 "Arctichik"
+
+VICTORY_POINTS_10852:0 "Polovskiy" #Polovskiy
+VICTORY_POINTS_10883:0 "Cheestopol"
+VICTORY_POINTS_1864:0 "Owovka"
+
+VICTORY_POINTS_11180:0 "Smovskoy" #Smovskoy
+VICTORY_POINTS_11157:0 "Leonsk"
+
+VICTORY_POINTS_59:0 "Muffinskoye" #Muffinskoye
+VICTORY_POINTS_11359:0 "Vilnia"
+VICTORY_POINTS_11353:0 "Gybloye"
+
+VICTORY_POINTS_11134:0 "Hoofbeat Town" #Hoofbeat
+VICTORY_POINTS_11122:0 "Zhukovka"
+VICTORY_POINTS_372:0 "Lesopilkino"
+
+VICTORY_POINTS_5077:0 "Ensk" #Enskiy Okrug
+VICTORY_POINTS_10869:0 "Rekagrad"
+
+VICTORY_POINTS_10687:0 "Cherryabinsk" #Cherryabinsk
+VICTORY_POINTS_2375:0 "Milklovka"
+VICTORY_POINTS_10830:0 "Lyulino"
+VICTORY_POINTS_2932:0 "Pivno"
+
+VICTORY_POINTS_2890:0 "Bukhovo" #Bukhovo
+VICTORY_POINTS_4626:0 "Vishnepon'"
+
+VICTORY_POINTS_3005:0 "Bezdna" #Bezdna
+VICTORY_POINTS_11233:0 "Loshadsk"
 #######################################################################
 # Nova Griffonia ######################################################
 #######################################################################
