--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -9,6 +9,41 @@ VICTORY_POINTS_13257:0 "Canterlot City"
 VICTORY_POINTS_13211:0 "North Canterlot"
 VICTORY_POINTS_13297:0 "South Canterlot"
 #######################################################################
+# Governorate Whinnyapolis ############################################
+#######################################################################
+VICTORY_POINTS_3835:0 "Whinnyapolis"
+VICTORY_POINTS_4528:0 "North Whinnyapolis"
+VICTORY_POINTS_2797:0 "East Whinnyapolis"
+VICTORY_POINTS_1740:0 "Riverpool"
+VICTORY_POINTS_11815:0 "Dobbin Lake"
+VICTORY_POINTS_3444:0 "Roadschester"
+VICTORY_POINTS_12074:0 "East Roadschester"
+VICTORY_POINTS_2334:0 "Dappleluth"
+VICTORY_POINTS_12293:0 "Hippogriffe-Falls"
+VICTORY_POINTS_11571:0 "Buckmington Bridge"
+VICTORY_POINTS_12694:0 "Eaglegan"
+VICTORY_POINTS_4094:0 "Bronco Park"
+VICTORY_POINTS_12062:0 "Burnsville"
+VICTORY_POINTS_11872:0 "Moonhead"
+VICTORY_POINTS_12310:0 "Red Canterlot"
+VICTORY_POINTS_12554:0 "Maple Grove"
+VICTORY_POINTS_12350:0 "Woodbury"
+VICTORY_POINTS_11773:0 "Inver Hoofed Heights"
+VICTORY_POINTS_11979:0 "Roseville"
+VICTORY_POINTS_12166:0 "Whinnytonka"
+VICTORY_POINTS_11741:0 "Mackinkato"
+VICTORY_POINTS_11859:0 "Richfield"
+VICTORY_POINTS_12023:0 "Winterchilla Rapids"
+VICTORY_POINTS_11861:0 "Freeze Shore"
+VICTORY_POINTS_2724:0 "Floodville"
+VICTORY_POINTS_4320:0 "Pontoria"
+VICTORY_POINTS_1804:0 "Flom"
+VICTORY_POINTS_12506:0 "Sundown"
+VICTORY_POINTS_12671:0 "Lonesand"
+VICTORY_POINTS_12317:0 "Barkfield"
+VICTORY_POINTS_3193:0 "Dufrost"
+VICTORY_POINTS_12671:0 "Lonesand"
+#######################################################################
 # West Equestrian Shore ###############################################
 #######################################################################
 VICTORY_POINTS_5453:0 "New Vesalipolis"
