Marked mapped griffonian cities
Finally, I'm back from Severianian hell!

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -1636,3 +1636,8 @@
  STATE_1635:0 "STATE_1635"
  STATE_1636:0 "Fluffy Chest"
  STATE_1637:0 "STATE_1637"
+ STATE_1638:0 "STATE_1638"
+ STATE_1639:0 "STATE_1639"
+ STATE_1640:0 "STATE_1640"
+ STATE_1641:0 "STATE_1641"
+ STATE_1642:0 "STATE_1642"
